--- a/03-Web学习/08-SpringBoot/05-动态数据源实现.md
+++ b/03-Web学习/08-SpringBoot/05-动态数据源实现.md
@@ -350,7 +350,7 @@ public class DruidConfig {
 
 ```
 
-### 4.4 TestServiceImpl-测试类
+### 4.4 TestServiceImpl - 测试类
 
 ```java
 package com.hong.springboot.service.impl;
@@ -464,7 +464,7 @@ public @interface SpecifyDataSource {
 
 ```
 
-### 5.3 使用注解切换数据源测试
+### 5.3 注解切换数据源测试
 
 ```java
 
