springboot动态数据源

--- a/03-Web学习/08-SpringBoot/05-动态数据源实现.md
+++ b/03-Web学习/08-SpringBoot/05-动态数据源实现.md
@@ -461,14 +461,114 @@ public @interface SpecifyDataSource {
 ### 5.2 DynamicDataSourceAspect - 切面类
 
 ```java
+package com.hong.springboot.util.dynamicDataSource;
+
+import org.aspectj.lang.JoinPoint;
+import org.aspectj.lang.annotation.After;
+import org.aspectj.lang.annotation.Aspect;
+import org.aspectj.lang.annotation.Before;
+import org.aspectj.lang.annotation.Pointcut;
+import org.aspectj.lang.reflect.MethodSignature;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.stereotype.Component;
+
+import java.lang.reflect.Method;
+
+import lombok.extern.slf4j.Slf4j;
+
+/**
+ * 动态数据源切面类
+ * 解析方法，如果上面有@SpecifyDataSource注解，那么就获取注解的值，根据注解的值动态创建数据源
+ * @author create by hongzh.zhang on 2021-03-19
+ */
+@Aspect // 声明为切面，需要引入切面相关pom
+@Component
+@Slf4j
+public class DynamicDataSourceAspect {
+
+    @Autowired // 注入动态数据源bean
+    private DynamicDataSource dynamicDataSource;
+
+
+    // 声明切入点：也就是在哪会进行操作
+    @Pointcut("@annotation(com.hong.springboot.util.dynamicDataSource.SpecifyDataSource)")
+    private void pointcut() {
+    }
+
+    /**
+     * 前置增强
+     * 获取数据源基础信息&根据基础信息创建并切换数据源
+     */
+    @Before("pointcut()")
+    public void before(JoinPoint joinPoint) throws Exception {
+
+        // 根据连接点获取到执行的类信息
+        Class<?> clazz = joinPoint.getTarget().getClass();
+        // 获取执行的方法
+        String methodName = joinPoint.getSignature().getName();
+
+        // 获取参数
+        Class[] argClass = ((MethodSignature) joinPoint.getSignature()).getParameterTypes();
+
+        // 获取到方法
+        Method method = clazz.getMethod(methodName, argClass);
+
+        // 获取方法上的SpecifyDataSource注解
+        SpecifyDataSource specifyDataSource = method.getAnnotation(SpecifyDataSource.class);
+        String dataSourceName = specifyDataSource.dataSourceName();
+        String driverClass = specifyDataSource.driverClass();
+        String url = specifyDataSource.url();
+        String username = specifyDataSource.username();
+        String password = specifyDataSource.password();
+
+        // 动态切换数据源
+        dynamicDataSource.useDynamicDataSource(dataSourceName, driverClass,
+                                                url, username, password);
+
+    }
+
+    /**
+     * 后置增强
+     * 最后切换为默认数据源
+     */
+    @After("pointcut()")
+    public void after() {
+        // 切换为默认数据源
+        DataSourceContextHolder.removeDataSource();
+    }
+
+
+}
 
 ```
 
 ### 5.3 注解切换数据源测试
 
 ```java
+    // 使用注解声明动态数据源为test1
+    @SpecifyDataSource(dataSourceName="test1", driverClass="com.mysql.cj.jdbc.Driver",
+        url="jdbc:mysql://localhost:3306/test1?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8",
+        username="test1", password="test1"
+    )
+    public WebResponse dynamicDataSource1() {
+        List<Object> list = testMapper.getTestList();
+        return WebResponse.success(list);
+    }
+
+
+    // 使用注解声明动态数据源为test2
+    @SpecifyDataSource(dataSourceName="test2", driverClass="com.mysql.cj.jdbc.Driver",
+            url="jdbc:mysql://localhost:3306/test2?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf-8",
+            username="test1", password="test1"
+    )
+    public WebResponse dynamicDataSource2() {
+        List<Object> list = testMapper.getTestList();
+        return WebResponse.success(list);
+    }
 
 ```
+
+结果：调用不同的方法，会使用不同的数据源来查询数据。
 
 ## ps-相关引用
 
