--- a/02-后端相关/03-JAVA-多线程/99-常见面试题.md
+++ b/02-后端相关/03-JAVA-多线程/99-常见面试题.md
@@ -17,5 +17,5 @@
         Thread类中声明sleep()， Object类中声明wait()。
     2. 调用的要求不同： 
         sleep()可以在任何需要的场景下调用， wait()必须使用在同步代码或者同步方法中使用。
-    3.  关于是否释放间步监视器：
+    3.  关于是否释放同步监视器：
         如果两个方法都使用在同步代码块或同步方法中，sleep()不会释放锁，wait()会释放锁
